--- a/src/app/eshboz/eshboz.component.html
+++ b/src/app/eshboz/eshboz.component.html
@@ -131,6 +131,9 @@
                                             <mat-option value="רטנ-ל"
                                                 >טיפול נמרץ לב</mat-option
                                             >
+                                            <mat-option value="רטנ-נ"
+                                                >טיפול נמרץ נשימתי</mat-option
+                                            >
                                             <mat-option value="רטנ-פ-י"
                                                 >טיפול מיוחד בפג ובילוד
                                                 החולה</mat-option
