--- a/src/app/orders-to-appointments/orders-to-appointments.component.html
+++ b/src/app/orders-to-appointments/orders-to-appointments.component.html
@@ -30,7 +30,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col d-none">
+                                <div class="col">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input
