--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -411,7 +411,7 @@
             </li>
 
             <li class="nav-item" *ngIf="_shoGlucose && !_shoSofiMenu">
-                <a class="nav-link" routerLink="glucose">נתוני לסוכרת</a>
+                <a class="nav-link" routerLink="glucose">נתונים לסוכרת</a>
             </li>
 
             <li class="nav-item" *ngIf="_sendSMS && !_shoSofiMenu">
