--- a/src/app/glucose/glucose.component.html
+++ b/src/app/glucose/glucose.component.html
@@ -10,7 +10,18 @@
         <span class="material-icons"> refresh </span>
     </button>
 </div>
-
+<div class="container-fluid">
+    <div class="row text-right" dir="rtl">
+        <div class="col">
+            <label id="example-radio-group-label">סינון</label>&nbsp;&nbsp;&nbsp;
+            <mat-radio-group dir="rtl" aria-label="Select an option">
+                <mat-radio-button (change)="filterArray($event)" checked="true" value="-1">הכל</mat-radio-button> &nbsp;&nbsp;
+                <mat-radio-button (change)="filterArray($event)" value="1">עם ייעוץ</mat-radio-button>&nbsp;&nbsp;
+                <mat-radio-button (change)="filterArray($event)"  value="2">בלי ייעוץ</mat-radio-button>
+            </mat-radio-group>
+        </div>
+    </div>
+</div>
 <div class="d-none container-fluid">
     <div class="row">
         <div class="col">
@@ -135,18 +146,21 @@
                                 {{ element.PGR_Patient_Age }}
                             </td>
                         </ng-container>
-                        
+
                         <ng-container matColumnDef="PGR_Taking_Date_MAX">
                             <th mat-header-cell *matHeaderCellDef>
                                 תאריך ושעת תוצאה ערך מקסימאלי או מינימאלי
                             </th>
                             <td mat-cell *matCellDef="let element">
-                                {{ element.PGR_Taking_Date_MAX }} {{ element.PGR_Taking_Time_MAX }}
+                                {{ element.PGR_Taking_Date_MAX }}
+                                {{ element.PGR_Taking_Time_MAX }}
                             </td>
                         </ng-container>
 
                         <ng-container matColumnDef="PGR_Rate_Value_MAX">
-                            <th mat-header-cell *matHeaderCellDef>ערך תוצאה מקסימאלי  או מינימאלי</th>
+                            <th mat-header-cell *matHeaderCellDef>
+                                ערך תוצאה מקסימאלי או מינימאלי
+                            </th>
                             <td mat-cell *matCellDef="let element">
                                 {{ element.PGR_Rate_Value_MAX }}
                             </td>
@@ -157,12 +171,15 @@
                                 תאריך ושעת תוצאה אחרונה
                             </th>
                             <td mat-cell *matCellDef="let element">
-                                {{ element.PGR_Taking_Date }} {{ element.PGR_Taking_Time }}
+                                {{ element.PGR_Taking_Date }}
+                                {{ element.PGR_Taking_Time }}
                             </td>
                         </ng-container>
 
                         <ng-container matColumnDef="PGR_Rate_Value">
-                            <th mat-header-cell *matHeaderCellDef>ערך תוצאה אחרונה</th>
+                            <th mat-header-cell *matHeaderCellDef>
+                                ערך תוצאה אחרונה
+                            </th>
                             <td mat-cell *matCellDef="let element">
                                 {{ element.PGR_Rate_Value }}
                             </td>
@@ -170,26 +187,30 @@
                         <ng-container matColumnDef="ReciveDoc">
                             <th mat-header-cell *matHeaderCellDef>מכתב קבלה</th>
                             <td mat-cell *matCellDef="let element">
-                                <button                                    
-                                (click)="openText(
-                                    HistoryTextDetailsModal,
-                                    'HistoryTextDetails',
-                                    element
-                                )"
+                                <button
+                                    (click)="
+                                        openText(
+                                            HistoryTextDetailsModal,
+                                            'HistoryTextDetails',
+                                            element
+                                        )
+                                    "
                                     mat-mini-fab
                                     color="primary"
                                 >
                                     <mat-icon>description</mat-icon>
-                                </button>                                
+                                </button>
                             </td>
-                        </ng-container>                        
+                        </ng-container>
                         <ng-container matColumnDef="WorkerName">
-                            <th mat-header-cell *matHeaderCellDef>היסטורית ייעוצים</th>
+                            <th mat-header-cell *matHeaderCellDef>
+                                היסטורית ייעוצים
+                            </th>
                             <td mat-cell *matCellDef="let element">
                                 <button
-                                    *ngIf="element.WorkerName =='1'"
+                                    *ngIf="element.WorkerName == '1'"
                                     (click)="
-                                    openCons(
+                                        openCons(
                                             HistoryConsoleDetailsModal,
                                             'HistoryConsoleDetails',
                                             element
@@ -199,11 +220,13 @@
                                     color="primary"
                                 >
                                     <mat-icon>connect_without_contact</mat-icon>
-                                </button>                                
+                                </button>
                             </td>
-                        </ng-container>                        
+                        </ng-container>
                         <ng-container matColumnDef="RowClick">
-                            <th mat-header-cell *matHeaderCellDef>היסטורית בדיקות</th>
+                            <th mat-header-cell *matHeaderCellDef>
+                                היסטורית בדיקות
+                            </th>
                             <td mat-cell *matCellDef="let element">
                                 <button
                                     (click)="
@@ -243,9 +266,11 @@
     </div>
 </div>
 <ng-template #HistoryDetailsModal let-modal>
-    <div dir="rtl"  class="card">
+    <div dir="rtl" class="card">
         <div class="card-header">
-            <h3 class="card-title text-center">היסטוריית בדיקות למקרה: <b>{{selectedCaseNumber}}</b></h3>
+            <h3 class="card-title text-center">
+                היסטוריית בדיקות למקרה: <b>{{ selectedCaseNumber }}</b>
+            </h3>
         </div>
         <div class="card-body"></div>
     </div>
@@ -292,33 +317,30 @@
                 {{ element.PGR_Rate_Value }}
             </td>
         </ng-container>
-        <tr
-            mat-header-row
-            *matHeaderRowDef="displayedColumnsByCase"
-        ></tr>
-        <tr
-            mat-row
-            *matRowDef="let row; columns: displayedColumnsByCase"
-        ></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsByCase"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsByCase"></tr>
     </table>
 </ng-template>
 <ng-template #HistoryTextDetailsModal let-modal>
-    <div dir="rtl"  class="card">
+    <div dir="rtl" class="card">
         <div class="card-header">
-            <h3 class="card-title text-center">סיכום למקרה: <b>{{selectedCaseNumber}}</b></h3>
+            <h3 class="card-title text-center">
+                סיכום למקרה: <b>{{ selectedCaseNumber }}</b>
+            </h3>
         </div>
         <div class="card-body">
-            <p class="content-text" *ngFor="let txt of Content; let i = index;">
-                {{txt.Content}}
+            <p class="content-text" *ngFor="let txt of Content; let i = index">
+                {{ txt.Content }}
             </p>
         </div>
     </div>
-    
 </ng-template>
 <ng-template #HistoryConsoleDetailsModal let-modal>
-    <div dir="rtl"  class="card">
+    <div dir="rtl" class="card">
         <div class="card-header">
-            <h3 class="card-title text-center">היסטוריית ייעוצים למקרה: <b>{{selectedCaseNumber}}</b></h3>
+            <h3 class="card-title text-center">
+                היסטוריית ייעוצים למקרה: <b>{{ selectedCaseNumber }}</b>
+            </h3>
         </div>
         <div class="card-body"></div>
     </div>
@@ -341,7 +363,7 @@
                 {{ element.ConsoleUserName }}
             </td>
         </ng-container>
-        
+
         <tr
             mat-header-row
             *matHeaderRowDef="displayedConsoleColumnsByCase"
