--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -230,6 +230,144 @@
                 <h3 class="labelName">תפוסה רפואית</h3>
             </div>
             <div class="row medics">
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:0:5">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:5:10">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:10:15">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:15:20">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:20:25">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:25:30">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:30:35">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="col-2 mt-2">
+                    <div class="row" *ngFor="let item of all_medical_departments_array | slice:35:40">
+                        <mat-card style="height: 90%;margin-bottom: 10px;" class="card-med dash-cards text-center">
+                            <div class="list-style text-center"
+                                style="font-size: 23px;color: darkblue;font-weight: bold;">
+                                {{item.Dept_Name}}
+                            </div>
+                            <div class="list-style text-center" style="font-size: 18px;font-weight: bold;"
+                                *ngIf="item.Dept_Name">
+                                סה"כ: {{item.OccupancyPerDepart}}
+                                <span>תפוסה:
+                                    {{item.PercentOccupancy}}%
+                                </span>
+                            </div>
+                        </mat-card>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="row medics">
                 <div class="col-2 mt-2" *ngFor="let item of all_medical_departments_array">
                     <mat-card style="height: 90%;" class="card-med dash-cards text-center">
                         <div class="list-style text-center" style="font-size: 23px;color: darkblue;font-weight: bold;">
@@ -244,7 +382,7 @@
                         </div>
                     </mat-card>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </mat-card>
@@ -441,7 +579,11 @@
             [routerLink]="['']" (click)="closeModal()">
             <i class="material-icons">home</i>
         </button>
-        <span class="mr-3">&#8734; 😨  ייתכן ואין לך הרשאת צפייה במידע זה &#8734;</span>
+        <span class="mr-3">&#8734; 😨 ייתכן ואין לך הרשאת צפייה במידע זה &#8734;</span><span>אולי רענון מסך
+            יעזור</span><button matTooltip="רענן מסך" mat-raised-button style="background: lawngreen;" type="button"
+            class="btn btn-raised" (click)="ngOnInit()">
+            <i class="material-icons">refresh</i>
+        </button>
     </h1>
 </ng-template>
 <ng-template #modalContent2 let-close="close">
